--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,18 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer base {
+  :root {
+    --color-primary: 181 161 229;
+    --color-on-primary: 16 14 23;
+    --color-background: 19 18 20;
+    --color-on-background: 234 230 242;
+    --color-surface: 29 28 31;
+    --color-on-surface: 221 218 229;
+    --color-outline: 62 61 64;
+  }
+}
+
 @layer utilities {
   .lds-ring {
     display: inline-block;
